--- a/examples/gwpattern_bg_canvas.tex
+++ b/examples/gwpattern_bg_canvas.tex
@@ -15,7 +15,7 @@
 
 
 % -- How To Use GWPattern -----------------------------------------------------
-\setbeamertemplate{background}[GWWithPattern]
+\setbeamertemplate{background}[GWPattern]
 \addtobeamertemplate{backgroud}{}{%
   \begin{tikzpicture}%
     % Potentially add logo
