--- a/examples/gwpattern_option.tex
+++ b/examples/gwpattern_option.tex
@@ -14,7 +14,7 @@
 
 
 % -- How To Use GWPattern -----------------------------------------------------
-\setbeamertemplate{background}[GWWithPattern]
+\setbeamertemplate{background}[GWPattern]
 
 
 % -- The rendering on diagonal lines can look strange if used in combination
