--- a/google_slides_template.tex
+++ b/google_slides_template.tex
@@ -63,7 +63,7 @@
 % ]
 % \LevelledBGLine{0.1\paperheight}
 
-% \setbeamertemplate{background}[GWWithPattern]
+% \setbeamertemplate{background}[GWPattern]
 
 % -- Some testing with GWPattern styles
 % \tikzset{
