--- a/examples/theme_design.tex
+++ b/examples/theme_design.tex
@@ -38,6 +38,9 @@
   \end{tikzpicture}
 }
 
+% NOTE: this will only work if you have this picture in the logos folder
+
+
 % -----------------------------------------------------------------------------
 
 
