--- a/GWtheme/beamerouterthemeGW.sty
+++ b/GWtheme/beamerouterthemeGW.sty
@@ -214,35 +214,28 @@
 
 
 \tikzset{
-    fillsquare1/.style={
-        black!12!fg,
-        line width=0.6pt,
-    },
-    fillsquarepath1/.style={
-        fg,
+    fillsquarepath/.style={
+        draw=none,  % So that actual path is not drawn, only decoration along it
+        % fg,  % In case draw=none makes strange things, uncomment this here. Second best option, usually works well
         postaction=decorate,
         decoration={
             markings,
             mark = between positions 0 and 1 step \themeGW@Pattern@StepSize with {
-                \draw[fillsquare1] (-\themeGW@Pattern@SquareSize/2, -\themeGW@Pattern@SquareSize/2) rectangle (\themeGW@Pattern@SquareSize/2, \themeGW@Pattern@SquareSize/2);
+                \draw[#1] (-\themeGW@Pattern@SquareSize/2, -\themeGW@Pattern@SquareSize/2) rectangle (\themeGW@Pattern@SquareSize/2, \themeGW@Pattern@SquareSize/2);
             },
         },
+    },
+    fillsquare1/.style={
+        black!12!fg,
+        line width=0.6pt,
     },
     fillsquare2/.style={
         % fg!90!gray,
         white!5!fg,
         line width=0.6pt,
-        },
-    fillsquarepath2/.style={
-        fg,
-        postaction=decorate,
-        decoration={
-            markings,
-            mark = between positions 0 and 1 step \themeGW@Pattern@StepSize with {
-                \draw[fillsquare2] (-\themeGW@Pattern@SquareSize/2, -\themeGW@Pattern@SquareSize/2) rectangle (\themeGW@Pattern@SquareSize/2, \themeGW@Pattern@SquareSize/2);
-            },
-        },
     },
+    fillsquarepath1/.style={fillsquarepath=fillsquare1},
+    fillsquarepath2/.style={fillsquarepath=fillsquare2},
 }
 
 
@@ -262,7 +255,10 @@
 \setlength{\themeGW@Pattern@MaxHeight}{\themeGW@upperrightbg}  % In current mode, where we have rising slope from left to right. But also good for levelled bg line
 \setlength{\themeGW@Pattern@SquarePathHeight}{\themeGW@Pattern@MaxHeight - \themeGW@Pattern@SquareSize * 707 / 1000}  % Very rough approximation of 1/sqrt(2), avoiding overflow. We do not account for linewidth (like Caltech website).
 
+\setlength{\themeGW@Pattern@DownShift}{\themeGW@Pattern@SquarePathHeight*\themeGW@Pattern@NSquareDownShift*2*\themeGW@Pattern@StepSize}% Step size is relative to triangle width, which is 2*SquarePathHeight
+
 \newcommand{\themeGW@Pattern@CalcLengths}{%
+    \message{Calculating GWPattern lengths.}%
     % -- Idea: re-calculate all default values that are related to SquarePathHeight
     \setlength{\themeGW@Pattern@DownShift}{\themeGW@Pattern@SquarePathHeight*\themeGW@Pattern@NSquareDownShift*2*\themeGW@Pattern@StepSize}% Step size is relative to triangle width, which is 2*SquarePathHeight
     \addtolength{\themeGW@Pattern@SquarePathHeight}{\themeGW@Pattern@DownShift}%
@@ -277,6 +273,8 @@
 
 
 \defbeamertemplate{background}{GWPattern}{%
+    \themeGW@Pattern@CalcLengths% Appropriate place to get final lengths, based on settings made before
+    % 
     \begin{tikzpicture}[overlay,remember picture]%
         % -- We can just do clipping in other scope and immediately draw correct thing here
         \clip[smooth] (current page.south west) -- ++(0, \themeGW@upperleftbg) -- ++(\paperwidth, \themeGW@upperrightbg-\themeGW@upperleftbg) -- (current page.south east) -- cycle;
