Recompiling files with new changes. Fixing typo in main script. Adjusting logo use google_slides_template.

--- a/google_slides_template.tex
+++ b/google_slides_template.tex
@@ -15,11 +15,11 @@
 
 % -- Adjust following for different templates
 % \usecolortheme{MPIGravMixed}
-% \usecolortheme{MPIMixed}
+\usecolortheme{MPIMixed}
 % \usecolortheme{MPI}
 % \usecolortheme{MPIGrav}
 % \usecolortheme{Caltech}
-\usecolortheme{MPIBlue}
+% \usecolortheme{MPIBlue}
 
 % \definecolor{MPIBlue}{HTML}{006699}
 % \definecolor{MPISecondaryBlue}{HTML}{00445F}
@@ -81,8 +81,8 @@
 % -- Design-independent settings
 % \titlegraphic{}  % Determines if logo shown on titlepage or not
 
-\pgfdeclareimage[height=0.1\paperheight]{logo}{logos/MPI-AEI_wide_E_neg_cmyk}
-% \pgfdeclareimage[height=0.1\paperheight]{logo}{}  % Hide logo
+% \pgfdeclareimage[height=0.1\paperheight]{logo}{logos/MPI-AEI_wide_E_neg_cmyk}
+\pgfdeclareimage[height=0.1\paperheight]{logo}{}  % Hide logo
 
 \setbeamertemplate{footline}[GW][false]  % Hide framenumbers, shall be set manually in Google slides
 % \setbeamertemplate{footline}{}  % Hide entire footline to create bare template
