--- a/main.tex
+++ b/main.tex
@@ -16,13 +16,20 @@
 % \usecolortheme{MPI}
 % \usecolortheme{Caltech}
 
-% \setbeamertemplate{background}[GWWithPattern]
+% \setbeamertemplate{background}[GWPattern]
+
+% \UpdateGWthemeOptions[%
+%   % patternnsquarepertriangle=6,
+%   patternnsquarepertriangle=11,
+%   patternnsquarecommonshift=2,
+%   patternnsquarerelativeshift=-4,
+% ]
 
 % \setbeamertemplate{headline}{}  % Hide GW progressbar to speed up compilation
 
 % \setbeamertemplate{frametitle}[GW][newline]
 % \setbeamertemplate{frametitle}[GW][none]
-\FramTitleAutoInsertSection
+\FrametitleAutoinsertSection
 
 
 % -- Activate/deactivate at will
@@ -37,11 +44,6 @@
 %         \subsectionpage
 %     \end{frame}%
 % }
-
-
-\pgfdeclareimage[height=0.1\paperheight]{logo}{logos/MPI-AEI_wide_E_neg_cmyk}
-% \logo{\includegraphics[height=0.1\paperheight]{logos/MPI-AEI_wide_E_neg_cmyk.pdf}}
-% \logo{\pgfdeclareimage[height=0.1\paperheight]{themeCaltech@background_logo}{logos/MPI-AEI_wide_E_neg_cmyk}}
 
 
 
