--- a/examples/gwpattern_option.tex
+++ b/examples/gwpattern_option.tex
@@ -41,7 +41,7 @@
   patternnsquarerelativeshift=6,
   % 
   patterninsetsize=15pt,
-  % patternnsquaredownshift=1,
+  patternnsquaredownshift=1,
   % levelledbgline=0.1\paperheight,  % Putting as last argument here is important!!
 ]
 \LevelledBGLine{0.1\paperheight}  % Argument = height of colored box
